<resources>
    <string name="app_name">Damn</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="Instaid">Enter Valid Insta_id</string>
    <string name="passworderror">Enter Some Password</string>
    <string name="mobileerror">Enter Valid Mobile Number</string>
    <string name="caption">Caption...</string>
    <string name="report">Report</string>
    <string name="attach_screenshot">Attach Screenshot</string>
    <string name="content">Content</string>
    <string name="high_lights">High Lights</string>
    <string name="events">Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="revenue_donation">Revenue Donation</string>
    <string name="tap_to_know_more">Tap To know More</string>
    <string name="views_on_your_recent_post">Views On Your Recent post</string>
    <string name="restart">Restart</string>
</resources>
