<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:windowSoftInputMode="adjustPan|adjustResize"
    android:background="#000"
    android:layout_height="match_parent"
    tools:context=".block">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/blockbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="-34dp"
        tools:layout_editor_absoluteY="-106dp" />

    <Button
        android:id="@+id/report"
        android:layout_width="210dp"
        android:layout_height="33dp"
        android:background="@drawable/whitebg"
        android:text="@string/report"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_marginBottom="55dp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





    <in.goodiebag.carouselpicker.CarouselPicker
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        app:items_visible="three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blockbg" />



    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attach_screenshot"
        android:layout_marginTop="5dp"
        android:textColor="#ffF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:layout_marginTop="4dp"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="#ff0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carousel" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Do Not Post !"
        android:textColor="#ff0000"
        android:textSize="25dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/carousel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>