<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".home">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/blog_list_view"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collagesel">
    </androidx.recyclerview.widget.RecyclerView>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/collagesel"
        android:background="#8c000000"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="56dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometogglehite"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="3.5dp"
                android:text="all"
                android:textColor="#000"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="58dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="3.5dp"
                android:text="Svce"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="62dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="3dp"
                android:text="Atriya"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="62dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="5dp"
                android:text="Saptigiri"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="75dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="5dp"
                android:text="Acharya"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="58dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="5dp"
                android:text="Reva"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="58dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="5dp"
                android:text="Mcc"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="5dp"
                android:text="Smvit"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="62dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="5dp"
                android:text="Nitee"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="78dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="5dp"
                android:text="Chaithniya"
                android:textColor="#FFF"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="68dp"
                android:layout_height="26dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/hometoogle"
                android:drawableLeft="@drawable/ic_forest"
                android:paddingLeft="5dp"
                android:text="Shindhi"
                android:textColor="#FFF"
                android:textSize="8sp" />
        </LinearLayout>
    </HorizontalScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/counterlayout"
        android:background="@drawable/counterbg"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/iosleaf" />
        <TextView
            android:id="@+id/textView21"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/views_on_your_recent_post"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        <TextView
            android:id="@+id/randomtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="#FFF"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />
    </androidx.constraintlayout.widget.ConstraintLayout>
   <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infintybfgradient"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/hometogglehite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/onetree"
                    android:layout_width="96dp"
                    android:layout_height="133dp"
                    android:background="@drawable/counterbg"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/iosleaf"
                    tools:layout_editor_absoluteX="111dp"
                    tools:layout_editor_absoluteY="43dp" />
                <ImageView
                    android:id="@+id/water"
                    android:layout_width="96dp"
                    android:layout_height="133dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/counterbg"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/water"
                    tools:layout_editor_absoluteX="111dp"
                    tools:layout_editor_absoluteY="43dp" />
            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tap_to_know_more"
            android:textColor="#000"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/textView221"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/revenue_donation"
            android:textColor="#000"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8c000000"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottomNavigationView"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="678dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
           <androidx.appcompat.widget.AppCompatImageButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:backgroundTint="@null"
               android:id="@+id/eyehome"
               android:layout_marginTop="2.5dp"
               android:scaleType="fitXY"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:background="@drawable/eyespy"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:id="@+id/grouphome"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_multiple_users_silhouette"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:id="@+id/camerahome"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/cameraclipart"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/event"
                android:background="@drawable/ic_maloik"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/treehome"
                android:background="@drawable/ic_leaf"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/infintyhome"
                android:background="@drawable/infinty"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/heart"
                android:background="@drawable/ic_heart"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/account"
                android:background="@drawable/ic_xoxo"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/block"
                android:background="@drawable/ic_block"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@null"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/logout"
                android:background="@drawable/ic_logout"/>
        </LinearLayout>
    </HorizontalScrollView>
    <ImageView
        android:id="@+id/randomview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/collagesel"
        app:srcCompat="@drawable/eyespy" />

</androidx.constraintlayout.widget.ConstraintLayout>